modified frontend
